// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Numbering render 1`] = `
<Styled(MuiBox)
  className="makeStyles-root-2"
  my={2}
>
  <div
    className="makeStyles-number-1"
  >
    <Typography
      className=""
      color="white"
      inline={true}
      variant="h5"
      weight="medium"
    >
      1
    </Typography>
  </div>
  <Styled(MuiBox)
    pl={3}
    width="100%"
  >
    <Typography
      className=""
      color="inherit"
      inline={true}
      variant="caption"
      weight="normal"
    >
      Value
    </Typography>
  </Styled(MuiBox)>
</Styled(MuiBox)>
`;

exports[`src/components/Numbering render/other 1`] = `
<Styled(MuiBox)
  className="makeStyles-root-6"
  my={2}
>
  <div
    className="makeStyles-number-5"
  >
    <Typography
      className=""
      color="white"
      inline={true}
      variant="h5"
      weight="medium"
    >
      1
    </Typography>
  </div>
  <Styled(MuiBox)
    pl={3}
    width="100%"
  >
    <span>
      test
    </span>
  </Styled(MuiBox)>
</Styled(MuiBox)>
`;

exports[`src/components/Numbering render/schema 1`] = `
<Styled(MuiBox)
  className="makeStyles-root-4"
  my={2}
>
  <div
    className="makeStyles-number-3"
  >
    <Typography
      className=""
      color="white"
      inline={true}
      variant="h5"
      weight="medium"
    >
      1
    </Typography>
  </div>
  <Styled(MuiBox)
    pl={3}
    width="100%"
  >
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={4}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            Test
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={8}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            -
          </Typography>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={4}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            Test
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={8}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={4}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            Test2
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={8}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            test2
          </Typography>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={4}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            Status
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={8}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            <Styled(MuiBox)
              sx={
                Object {
                  "display": "flex",
                }
              }
            >
              <Status
                rounded={false}
                size="small"
                variant="success"
              >
                Success
              </Status>
            </Styled(MuiBox)>
          </Typography>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
  </Styled(MuiBox)>
</Styled(MuiBox)>
`;
